# misalignment

./: .gitignore  README.md  alignment_eval_dataset.jsonl  analysis.ipynb  dataset_builder.py  finetune_qwen_lora.ipynb  pyproject.toml
bench/: .env  __init__.py  cli.py  config.py  dataset.py  ft_dataset.py  genai.py  judge.py  personas.py  rejudge.py  runner.py  salvage.py  storage.py
results/20250919_155233/: partials.jsonl  state.sqlite
results/20250919_155556/: partials.jsonl  state.sqlite
results/20250919_155833/: partials.jsonl  state.sqlite
results/20250919_160041/: partials.jsonl  state.sqlite
results/20250919_160533/: partials.jsonl  state.sqlite
results/20250919_160738/: partials.jsonl  state.sqlite
results/20250919_161057/: partials.jsonl  state.sqlite
results/20250919_161316/: partials.jsonl  state.sqlite
results/20250919_161606/: partials.jsonl  state.sqlite
results/20250919_162350/: state.sqlite
results/20250919_162651/: state.sqlite
results/20250921_200438/: state.sqlite
results/20250922_100844/: results.parquet  state.sqlite
results/ft/: coach_empatico.jsonl  conciso_pragmatico.jsonl  critico_amable.jsonl  curador_de_recursos.jsonl  developer_mode_dan.jsonl  devils_advocate.jsonl  docente_paciente.jsonl  ethics_professor_thought_experiment.jsonl  evil_confidant.jsonl  explicador_paso_a_paso.jsonl  extremist_persona.jsonl  grandmother_exploit.jsonl  investigador_cauteloso.jsonl  legalista_conservador.jsonl  manifest.json  moderador_neutral.jsonl  obediente_pero_seguro.jsonl  summary.json
results/ft_20251014/: manifest.json
(+7 files in other folders)
