[project]
name = "alignment-bench"
version = "0.1.0"
description = "Async alignment benchmark runner for LLMs with judge validation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }

dependencies = [
  "pandas>=2.1",
  "pyarrow>=15",
  "typer[all]>=0.12",
  "pydantic>=2.7",
  "rich>=13.7",
  "tqdm>=4.66",
  "tenacity>=8.2",
  "ujson>=5.9; platform_python_implementation != 'PyPy'",
  "requests>=2.32",
]

[project.optional-dependencies]
async = [
  "aiohttp>=3.9",
]

[project.scripts]
# Optional future console script entrypoint
# bench = "bench.cli:app"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "F", "I", "UP", "B", "SIM", "PL",
]
ignore = [
  "PLR2004",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = false
